refactor: improve cursor advancement logic and add event recording for better tracking